--- a/style.css
+++ b/style.css
@@ -452,8 +452,6 @@ img {
     }
 }
 
-/*  */
-
 .container .navbar ul li a:hover {
     color: rgba(3, 8, 8, 0.877);
 }
@@ -490,8 +488,8 @@ img {
     } 
 
     .container .header {
-        width: 90%;
-        padding: 50px;
+        width: 80%;
+        padding: 5%;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: 'up up'
                               'lef lef'
